@@ -2,9 +2,7 @@
 exec java -jar jassh.jar -nocompdaemon -usejavacp -savecompiled "$0" "$@"
 !#
 
-import fr.janalyse.ssh._
-
-SSH.shell(host="localhost", username="test", password=Some("testtest")) { sh =>
+jassh.SSH.shell("localhost", "test", password=Some("testtest")) { sh =>
   println(sh.execute("""echo -n "Hello World from `hostname`" """))
 }
 
